# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: brain_logic.py  cli.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
