[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "brain-games"
authors = ["Nikita Kashmanov <iipabauapyka@gmail.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]
repository = "https://github.com/sp0on4/python-project-49"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Students",
    "Intended Audience :: Information Technology",
    "Operating System :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython"
]


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
